force-app/main/default/objects/numm__FAParameter__c/numm__FAParameter__c.object-meta.xml
<CustomObject>
    <description>Définition de l&#39;axe d&#39;application de la règle d&#39;entreprise</description>
    <label>Paramétrage général</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paramétrages généraux</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>