force-app/main/default/objects/numm__FAParameter__c/fields/numm__CoefAnnee1__c.field-meta.xml
<CustomField>
    <fullName>numm__CoefAnnee1__c</fullName>
    <label>Entre (durée en année)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>