force-app/main/default/objects/numm__FAParameter__c/fields/numm__CoefAnnee2__c.field-meta.xml
<CustomField>
    <fullName>numm__CoefAnnee2__c</fullName>
    <label>et (durée en année)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>