force-app/main/default/objects/numm__FAParameter__c/fields/numm__CoefDateDebut__c.field-meta.xml
<CustomField>
    <fullName>numm__CoefDateDebut__c</fullName>
    <description>Date de début</description>
    <label>Date de début</label>
    <type>Date</type>
</CustomField>