force-app/main/default/objects/numm__FAParameter__c/fields/numm__CoefDateFin__c.field-meta.xml
<CustomField>
    <fullName>numm__CoefDateFin__c</fullName>
    <label>Date de fin</label>
    <type>Date</type>
</CustomField>