force-app/main/default/objects/numm__FAParameter__c/fields/numm__CoefValue__c.field-meta.xml
<CustomField>
    <fullName>numm__CoefValue__c</fullName>
    <description>Coefficient du dégressif</description>
    <label>Coefficient</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>