force-app/main/default/objects/numm__FAParameter__c/fields/numm__CompteurNumero__c.field-meta.xml
<CustomField>
    <fullName>numm__CompteurNumero__c</fullName>
    <label>Numéro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>