force-app/main/default/objects/numm__FAParameter__c/fields/numm__NumPlan__c.field-meta.xml
<CustomField>
    <fullName>numm__NumPlan__c</fullName>
    <description>Numéro de plan : 1 COMPTA, 2 FISCAL, 3 IFRS, 4 IFRS.</description>
    <label>Numéro de plan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>