force-app/main/default/objects/numm__FAParameter__c/fields/numm__PlanActif__c.field-meta.xml
<CustomField>
    <fullName>numm__PlanActif__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activation du plan d&#39;amortissement</description>
    <label>Actif</label>
    <type>Checkbox</type>
</CustomField>