force-app/main/default/objects/numm__FAParameter__c/fields/numm__PlanType__c.field-meta.xml
<CustomField>
    <fullName>numm__PlanType__c</fullName>
    <description>Type de plan : COMPTA, FISCAL, IFRS</description>
    <label>Type de plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COMPTA</fullName>
            </value>
            <value>
                <fullName>FISCAL</fullName>
            </value>
            <value>
                <fullName>IFRS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>