force-app/main/default/objects/numm__FAParameter__c/fields/numm__RegleAxeRubrique__c.field-meta.xml
<CustomField>
    <fullName>numm__RegleAxeRubrique__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Rubrique d&#39;immobilisation sur laquelle la règle d&#39;entreprise se base.</description>
    <label>Rubrique</label>
    <referenceTo>numm__SectionName__c</referenceTo>
    <relationshipName>FAParameters</relationshipName>
    <type>Lookup</type>
</CustomField>