force-app/main/default/objects/numm__FAParameter__c/fields/numm__RegleType__c.field-meta.xml
<CustomField>
    <fullName>numm__RegleType__c</fullName>
    <defaultValue>false</defaultValue>
    <description>La règle d&#39;entreprise se base sur le type d&#39;immobilisation</description>
    <label>Type d&#39;immobilisation</label>
    <type>Checkbox</type>
</CustomField>