force-app/main/default/objects/numm__FAParameter__c/fields/numm__TypeAmort__c.field-meta.xml
<CustomField>
    <fullName>numm__TypeAmort__c</fullName>
    <description>AUC,LIN,DEG,UO,SOFT,CR</description>
    <label>Type d&#39;amortissement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aucun</fullName>
            </value>
            <value>
                <fullName>Linéaire</fullName>
            </value>
            <value>
                <fullName>Dégressif</fullName>
            </value>
            <value>
                <fullName>UO</fullName>
            </value>
            <value>
                <fullName>Softy</fullName>
            </value>
            <value>
                <fullName>Croissant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>