force-app/main/default/objects/numm__FAParameter__c/fields/numm__TypeAmortFiscal__c.field-meta.xml
<CustomField>
    <fullName>numm__TypeAmortFiscal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Le type d&#39;amortissement est autorisé pour le plan fiscal</description>
    <label>Fiscal</label>
    <type>Checkbox</type>
</CustomField>