force-app/main/default/objects/numm__FAParameter__c/recordTypes/numm__Coefficients_fiscaux.recordType-meta.xml
<RecordType>
    <fullName>numm__Coefficients_fiscaux</fullName>
    <active>true</active>
    <description>Coefficients fiscaux en fonction des périodes</description>
    <label>Coefficients fiscaux</label>
</RecordType>