force-app/main/default/objects/numm__FAParameter__c/recordTypes/numm__Compteur.recordType-meta.xml
<RecordType>
    <fullName>numm__Compteur</fullName>
    <active>true</active>
    <description>Compteur d&#39;immobilisation, de plans et autres</description>
    <label>Compteur</label>
</RecordType>