force-app/main/default/objects/numm__FAParameter__c/recordTypes/numm__Law.recordType-meta.xml
<RecordType>
    <fullName>numm__Law</fullName>
    <active>true</active>
    <description>Paramétrage des règles d&#39;entreprise</description>
    <label>Règle d&#39;entreprise</label>
</RecordType>