force-app/main/default/objects/numm__FAParameter__c/recordTypes/numm__PlanAmort.recordType-meta.xml
<RecordType>
    <fullName>numm__PlanAmort</fullName>
    <active>true</active>
    <description>Plan d&#39;amortissement actifs</description>
    <label>Plan d&#39;amortissement</label>
</RecordType>