force-app/main/default/objects/numm__FAParameter__c/recordTypes/numm__TypeAmortissement.recordType-meta.xml
<RecordType>
    <fullName>numm__TypeAmortissement</fullName>
    <active>true</active>
    <description>Types d&#39;amortissement disponibles</description>
    <label>Type d&#39;amortissement</label>
</RecordType>