force-app/main/default/objects/numm__FAParameter__c/validationRules/numm__CoeffCoefObligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__CoeffCoefObligatoire</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName =&quot;Coefficients_fiscaux&quot;  ,   numm__CoefValue__c &lt;= 0, $User.numm__BypassRegles__c = false)</errorConditionFormula>
    <errorMessage>Le coefficient doit être renseigné.</errorMessage>
</ValidationRule>