force-app/main/default/objects/numm__FAParameter__c/validationRules/numm__CoeffDate.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__CoeffDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName =&quot;Coefficients_fiscaux&quot;  ,  numm__CoefDateDebut__c &gt; numm__CoefDateFin__c, $User.numm__BypassRegles__c = false )</errorConditionFormula>
    <errorMessage>La date de début doit être inférieure à la date de fin.</errorMessage>
</ValidationRule>