force-app/main/default/objects/numm__FAParameter__c/validationRules/numm__CoeffDateDebutObligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__CoeffDateDebutObligatoire</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName =&quot;Coefficients_fiscaux&quot;  ,    IsNull(numm__CoefDateDebut__c ), $User.numm__BypassRegles__c = false)</errorConditionFormula>
    <errorMessage>La date de début est obligatoire.</errorMessage>
</ValidationRule>