force-app/main/default/objects/numm__FAParameter__c/validationRules/numm__CoeffDateFinObligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__CoeffDateFinObligatoire</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName =&quot;Coefficients_fiscaux&quot;  ,    IsNull(numm__CoefDateFin__c ), $User.numm__BypassRegles__c = false)</errorConditionFormula>
    <errorMessage>La date de fin est obligatoire.</errorMessage>
</ValidationRule>