force-app/main/default/objects/numm__FAParameter__c/validationRules/numm__LawRuleNothingIsCompleted.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__LawRuleNothingIsCompleted</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName =&quot;Law&quot;  , numm__RegleType__c = false ,numm__RegleAxeRubrique__c = null, $User.numm__BypassRegles__c = false)</errorConditionFormula>
    <errorMessage>Veuillez sélectionner soit &quot;Type d&#39;immobilisation&quot;, soit une rubrique.</errorMessage>
</ValidationRule>